--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 </head>
 
 <body>
-<<<<<<< HEAD
+    <div>Punya si Fahmi</div>
     <div>Punya Otong</div>
     <div>Lanjutan punya otong</div>
-=======
-    <div>Punya si Fahmi</div>
->>>>>>> 9d9144cf6dc2617fb10ce255627bde805e910d83
+    <div>Bingung lanjut apa lagi</div>
 </body>
 
 </html>
