--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div>Punya Otong</div>
     <div>Lanjutan punya otong</div>
     <div>Punya si Fahmi</div>
-
+    <div>Lanjutan punya fahmi</div>
+    <!-- Udah ada progress tapi ada yg merge,  -->
+    <!-- Ada conflict karena menggunakan line yg sama -->
+    <!-- Fix manual di local -->
 </body>
 
 </html>
